<resources>
    <string name="app_name">Telegram Motion Layout</string>
    <string name="account">Account</string>
    <string name="mr_light">Mr Light</string>
    <string name="online">online</string>
    <string name="_20_102_0506814">+20 102 0506814</string>
    <string name="tap_to_change_phone_number">Tap to change phone number</string>
    <string name="mrlight_515">&#64;MrLight_515</string>
    <string name="username">Username</string>
    <string name="bio">Bio</string>
    <string name="add_a_few_words_about_yourself">Add a few words about yourself</string>
    <string name="settings">Settings</string>
    <string name="chat_settings">Chat Settings</string>
    <string name="privacy_and_security">Privacy and Security</string>
    <string name="notification_and_sounds">Notification and Sounds</string>
    <string name="data_and_storage">Data and Storage</string>
    <string name="power_saving">Power Saving</string>
    <string name="chat_folder">Chat Folder</string>
    <string name="devices">Devices</string>
    <string name="english">English</string>
    <string name="language">Language</string>
    <string name="todo">TODO</string>
</resources>